RESOLVED FIXED56987
preserveDrawingBuffer=true is ignored
https://bugs.webkit.org/show_bug.cgi?id=56987
Summary preserveDrawingBuffer=true is ignored
John Bauman
Reported 2011-03-23 20:05:15 PDT
preserveDrawingBuffer=true is ignored
Attachments
Patch (4.58 KB, patch)
2011-03-23 20:13 PDT, John Bauman
no flags
John Bauman
Comment 1 2011-03-23 20:13:34 PDT
Kenneth Russell
Comment 2 2011-03-24 13:12:54 PDT
Comment on attachment 86737 [details] Patch Looks good. Thanks for fixing this.
WebKit Commit Bot
Comment 3 2011-03-24 14:41:02 PDT
Comment on attachment 86737 [details] Patch Clearing flags on attachment: 86737 Committed r81899: <http://trac.webkit.org/changeset/81899>
WebKit Commit Bot
Comment 4 2011-03-24 14:41:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.